# geofencecot

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  example-config.ini  requirements_test.txt  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: ci.yml
debian/: geofencecot.conf  geofencecot.postinst  geofencecot.service
src/geofencecot/: __init__.py  classes.py  commands.py  constants.py  distance.py  functions.py  identity.py  marker.py  network.py  position.py
tests/: test_geofencecot.py
