[metadata]
name = geofencecot
version = file: src/geofencecot/VERSION
description = Geo-fence Guard: alert on CoT markers via UDP multicast
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
url = https://github.com/<your-user>/geofencecot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Communications

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pytak>=7.3.12

[options.packages.find]
where = src

[options.package_data]
geofencecot = VERSION

[options.entry_points]
console_scripts =
    geofencecot = geofencecot.commands:main
